# litmus-project

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  THEORIZER_LITMUS_INTEGRATION_PLAN.md  TODO.md  UI_GAP_ANALYSIS.md  UI_WIREFRAMES.md  draft-plan.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: tests.yml
api/: openapi.yaml
backend/: README.md  __init__.py  auth.py  env.py  main.py  models.py  requirements.txt  schemas.py  types.py
backend/cloud_labs/: __init__.py  base.py  models.py  registry.py
backend/services/: __init__.py  agentmail_service.py  edison_client.py  edison_integration.py  edison_types.py  experiment_interpreter.py  experiment_types.py  lab_packet_service.py  llm_service.py
docs/case-studies/: 01-honey-remedy.md  02-ai-drug-screening.md  03-operator-perspective.md  04-failed-hypothesis.md
examples/: intake_cell_viability.json  intake_custom.json  intake_enzyme_inhibition.json  intake_mic_assay.json  intake_microbial_growth.json  intake_qpcr_expression.json  intake_sanger_verification.json  intake_zone_inhibition.json  lab_profile_commercial.json  lab_profile_individual.json
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
litmus_mcp/: README.md  mcp.json  requirements.txt
router/: router.py  router.ts
schemas/: deliverables_taxonomy.json  experiment_intake.json  lab_profile.json
scripts/: seed_demo.py
tests/: test_cloud_labs.py  test_edison_client.py  test_edison_integration.py  test_lab_packet_endpoints.py
(+107 files in other folders)
