[project]
name = "litmus-project"
version = "0.1.0"
description = "AI Wet Lab Validation Marketplace - Schemas, Router, and MCP Integration"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Litmus Science"}
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "jsonschema>=4.0",
    "httpx>=0.26.0",
]
mcp = [
    "mcp>=1.0.0",
]
backend = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0",
    "coredis>=5.6.0",
    "greenlet",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "edison-client>=0.8.4",
]

[project.scripts]
litmus-mcp = "litmus_mcp.src.server:main"
litmus-api = "backend.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
